--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## DATASOURCE
 
-spring.datasource.url=jdbc:h2:file:./data/dbWorkshop
+spring.datasource.url=jdbc:h2:mem:coderHouse
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=1234
